--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "npx http-server . -p 8000",
     "serve": "npx http-server . -p 8000 -o",
-    "deploy": "netlify deploy --prod"
+    "deploy": "netlify deploy --prod",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "netlify dev:exec drizzle-kit migrate",
+    "db:studio": "netlify dev:exec drizzle-kit studio"
   },
   "keywords": [
     "capybara",
@@ -17,6 +20,12 @@
   "author": "GitHub",
   "license": "MIT",
   "devDependencies": {
+    "drizzle-kit": "^0.31.7",
     "http-server": "^14.1.1"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.7",
+    "postgres": "^3.4.7"
   }
 }
