--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "license": "MIT",
   "devDependencies": {
     "drizzle-kit": "^0.31.7",
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "netlify-cli": "^23.12.0"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
