--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,11 @@
 [build]
-command = "echo 'No build required for static site'"
+command = "echo 'Build complete' && npm install"
 publish = "."
 base = ""
+functions = "netlify/functions"
 
 [build.environment]
-NODE_VERSION = "16"
+NODE_VERSION = "20.12.2"
 
 [[redirects]]
 from = "/*"
