--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "postgres": "^3.4.7"
+  },
+  "engines": {
+    "node": ">=20.12.2"
   }
 }
