Simplify Netlify Functions to stub implementation
- Functions were trying to import db modules that cannot be resolved during bundling
- Convert all functions to placeholder responses
- API endpoints return development status messages
- Full Netlify DB integration will happen after DB is initialized
- Site continues to work with localStorage for user data

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,9 @@
 [build]
-command = "echo 'Build complete' && npm install"
+command = "npm install"
 publish = "."
 base = ""
 functions = "netlify/functions"
+ignore = "npm run build"
 
 [build.environment]
 NODE_VERSION = "20.12.2"
