--- a/netlify.toml
+++ b/netlify.toml
@@ -20,3 +20,23 @@ X-Content-Type-Options = "nosniff"
 X-Frame-Options = "DENY"
 X-XSS-Protection = "1; mode=block"
 Referrer-Policy = "no-referrer"
+
+[[headers]]
+for = "/images/*"
+[headers.values]
+Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+for = "*.js"
+[headers.values]
+Cache-Control = "public, max-age=604800"
+
+[[headers]]
+for = "*.css"
+[headers.values]
+Cache-Control = "public, max-age=604800"
+
+[[headers]]
+for = "*.html"
+[headers.values]
+Cache-Control = "public, max-age=3600"
